--- a/src/_includes/meta.njk
+++ b/src/_includes/meta.njk
@@ -1,13 +1,13 @@
 {%- set absolutePageUrl -%}{{ page.url | url | absoluteUrl(metadata.url) }}{%- endset -%}
 {%- if title === "Home" -%}
-	{%- set text = "Creating delightful, magical, and accessible art with code." -%}
 	{%- set desc = description -%}
 	{%- set ogTitle = "Elly Loel" -%}
+	{%- set ogAlt = "A screenshot of ellyloel.com." -%}
 	{%- set ogUrl = "https://api.microlink.io/?url=https%3A%2F%2Fwww.ellyloel.com&screenshot=true&meta=false&embed=screenshot.url" -%}
 {%- else -%}
-	{%- set text = title -%}
 	{%- set desc = page.excerpt -%}
 	{%- set ogTitle = title -%}
+	{%- set ogAlt = "A background of curved purple lines with the text “{{ title }}” ontop, Elly's logo is in the bottom right corner." -%}
 	{%- set ogUrl -%}https://api.microlink.io/?url=https%3A%2F%2Fwww.ellyloel.com%2Fog{{ page.url }}&screenshot=true&meta=false&embed=screenshot.url{%- endset -%}
 {%- endif -%}
 
@@ -35,7 +35,7 @@
 <meta property="og:image" content="{{ ogUrl }}">
 <meta name="og:image" content="{{ ogUrl }}">
 <meta name="og:image:secure_url" content="{{ ogUrl }}">
-<meta property="og:image:alt" content="A background of curved purple lines with the text “{{ text }}” ontop, Elly's logo is in the bottom right corner.">
+<meta property="og:image:alt" content="{{ ogAlt}}">
 <meta name="fediverse:creator" content="@elly@front-end.social">
 
 {#- Icons -#}
