--- a/src/input/css/blocks/hero.css
+++ b/src/input/css/blocks/hero.css
@@ -1,10 +1,10 @@
 .hero {
-	align-items: center;
 	display: grid;
 	grid-template-columns: 100%;
-	justify-items: center;
+	place-items: center center;
 
 	& h1 {
+		font-size: 2.5rem;
 		grid-column: 1 / 2;
 		grid-row: 1 / 2;
 		margin: 0;
@@ -21,25 +21,27 @@
 		display: block;
 
 		& .stroke {
+			--color: var(--accent-solid);
+
 			cursor: url("/assets/img/meme-pop-cat-cursor.webp"), default;
-			user-select: none;
+			margin-inline: 0.05em;
 
 			&:active {
-				cursor: url("/assets/img/meme-pop-cat-pointer.webp"), pointer;
+				cursor: url("/assets/img/meme-pop-cat-pointer.webp"), default;
 			}
 		}
 	}
 
 	@media (width >= 48em) { /* 768px */
-		grid-template-columns: auto var(--size-8) 1fr;
+		grid-template-columns: 2fr 1fr;
 
 		& h1 {
-			grid-column: 1 / 3;
+			grid-column: 1 / 2;
 			grid-row: 1 / 2;
 		}
 
 		& .lego-container {
-			grid-column: 2 / 4;
+			grid-column: 2 / 3;
 			grid-row: 1 / 2;
 		}
 	}
