--- a/src/input/css/blocks/eight-ball.css
+++ b/src/input/css/blocks/eight-ball.css
@@ -12,7 +12,7 @@ eight-ball button {
 
 	border-radius: 0.3em;
 	box-shadow: none;
-	padding: var(--size-1);
+	padding: 0.15em;
 
 	&:is(:hover, :focus-visible) {
 		--_bg: var(--neutral-base);
