--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -7,8 +7,8 @@
 					<details-utils close-esc close-click-outside>
 						<details>
 							<summary>
-								{%- icon "fas:play" -%}
 								{{ entry.title }}
+								{%- icon "fas:plus" -%}
 							</summary>
 							<ul role="list">
 								{%- for child in entry.children %}
