--- a/src/input/css/blocks/nav.css
+++ b/src/input/css/blocks/nav.css
@@ -35,7 +35,7 @@
 				border-radius: var(--radius-2);
 				cursor: pointer;
 				display: flex;
-				gap: 0.75ch;
+				gap: 0.5ch;
 				margin-left: calc(var(--size-1) * -1);
 				margin-right: calc(var(--size-1) * -1);
 				padding-block: 0;
@@ -89,7 +89,7 @@
 				margin-block-end: 0;
 
 				& .icon {
-					transform: rotate(90deg);
+					transform: rotate(0.125turn);
 				}
 			}
 
